force-app/main/default/objects/Marketing_Contact__c/Marketing_Contact__c.object-meta.xml
<CustomObject>
    <label>Marketing Contact</label>
    <nameField>
        <label>Marketing Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>