force-app/main/default/objects/Marketing_Contact__c/fields/emailEmail__c.field-meta.xml
<CustomField>
    <fullName>emailEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>