force-app/main/default/objects/Marketing_Contact__c/fields/MarketingLead__c.field-meta.xml
<CustomField>
    <fullName>MarketingLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Lead</label>
    <referenceTo>Marketing_Lead__c</referenceTo>
    <relationshipLabel>Marketing Contacts</relationshipLabel>
    <relationshipName>Marketing_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>