force-app/main/default/objects/Marketing_Contact__c/fields/phonePhone__c.field-meta.xml
<CustomField>
    <fullName>phonePhone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>