force-app/main/default/objects/Marketing_Contact__c/fields/refMarketing_Account__c.field-meta.xml
<CustomField>
    <fullName>refMarketing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Account</label>
    <referenceTo>Marketing_Account__c</referenceTo>
    <relationshipLabel>Marketing Contacts</relationshipLabel>
    <relationshipName>Marketing_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>