force-app/main/default/objects/Marketing_Contact__c/fields/refMarketingLead__c.field-meta.xml
<CustomField>
    <fullName>refMarketingLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Marketing Contacts</relationshipLabel>
    <relationshipName>Marketing_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>