force-app/main/default/objects/Marketing_Contact__c/fields/txtTitle__c.field-meta.xml
<CustomField>
    <fullName>txtTitle__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>